# virtual_ecosystem

./: CMakeLists.txt  README.md
src/: action_context.cpp  action_context.h  cell_type.cpp  cell_type.h  display.h  main.cpp  map.cpp  map.h  organism.cpp  organism.h  position.cpp  position.h  printable.h  random.cpp  random.h  settings.cpp  settings.h  simulation.cpp  simulation.h  size.cpp  size.h  species_info.cpp  species_info.h  species_type.h
src/control/: application.cpp  application.h  console_input.cpp  console_input.h  input.cpp  input.h  user_action.cpp  user_action.h  user_action_parser.cpp  user_action_parser.h
src/loading/: map_loader.cpp  map_loader.h  map_loader_error.h
src/organisms/: alga.cpp  alga.h  bacteria.cpp  bacteria.h  fungus.cpp  fungus.h  organism.cpp  organism.h
src/presentation/: console_simulation_presenter.cpp  console_simulation_presenter.h  simulation_presenter.h
src/settings/: settings.cpp  settings.h  species_info.cpp  species_info.h
